# RoMAE-Experiments

./: Install_MN_Sera.sh  README.md  leonardo_env.txt
Interpolation_Electricity/: pyproject.toml
Interpolation_Electricity/Interpolation_Electricity/: __main__.py  dataset.py  finetune.py  pretrain.py  test.ipynb
Interpolation_Electricity/checkpoints/checkpoint-10000/: model_config.json
Interpolation_Electricity/checkpoints/checkpoint-9970/: random_states_0.pkl
Interpolation_Electricity/checkpoints/checkpoint-9980/: trainer_state.json
Interpolation_Electricity/checkpoints/checkpoint-9990/: random_states_0.pkl  trainer_state.json
Interpolation_Physio/: pyproject.toml
Interpolation_Physio/Interpolation_Physio/: dataset.py  pretrain.py  test.ipynb
Interpolation_Physio/checkpoints/checkpoint-10000/: random_states_0.pkl
Interpolation_Physio/checkpoints/checkpoint-9970/: trainer_state.json
Interpolation_Physio/checkpoints/checkpoint-9980/: random_states_0.pkl  trainer_config.json
Interpolation_frequency/: pyproject.toml
Interpolation_frequency/Interpolation_frequency/: __main__.py  dataset.py  plots_freqtest.ipynb  preprocess.py  pretrain.py  test.ipynb  test_heatmaps_plots_retrained.ipynb
Interpolation_frequency/checkpoint-10000_light_blue/: model_config.json  trainer_config.json
Interpolation_frequency/checkpoint-10000_purple/: random_states_0.pkl  trainer_config.json
Interpolation_frequency/checkpoint-10000_yellow/: model_config.json  trainer_config.json
Interpolation_frequency/checkpoint-4000_orange/: model_config.json  random_states_0.pkl  trainer_config.json
Interpolation_frequency/checkpoints/checkpoint-9520/: trainer_state.json
Interpolation_frequency/checkpoints/checkpoint-9530/: random_states_0.pkl  trainer_state.json
Interpolation_frequency/checkpoints/checkpoint-9540/: model_config.json  trainer_state.json
Interpolation_frequency/checkpoints/checkpoint-9550/: trainer_config.json  trainer_state.json
Interpolation_frequency/wandb/: latest-run
Interpolation_frequency/wandb/run-20251015_165454-sbzz3xag/: run-sbzz3xag.wandb
Interpolation_frequency/wandb/run-20251015_165454-sbzz3xag/files/: config.yaml  wandb-metadata.json
Interpolation_frequency/wandb/run-20251015_170502-8pq6k1za/: run-8pq6k1za.wandb
Interpolation_frequency/wandb/run-20251015_170502-8pq6k1za/files/: config.yaml  wandb-metadata.json
Interpolation_frequency/wandb/run-20251015_170513-mrz4xpab/: run-mrz4xpab.wandb
Interpolation_frequency/wandb/run-20251015_170513-mrz4xpab/files/: config.yaml  wandb-metadata.json
Interpolation_frequency/wandb/run-20251015_170910-x8hewu0a/: run-x8hewu0a.wandb
Interpolation_frequency/wandb/run-20251015_170910-x8hewu0a/files/: config.yaml  wandb-metadata.json
Interpolation_frequency/wandb/run-20251015_170927-56i3201u/: run-56i3201u.wandb
Interpolation_frequency/wandb/run-20251015_170927-56i3201u/files/: config.yaml  wandb-metadata.json
Interpolation_frequency/wandb/run-20251015_170959-oq9nkbkf/: run-oq9nkbkf.wandb
Interpolation_frequency/wandb/run-20251015_170959-oq9nkbkf/files/: config.yaml  wandb-metadata.json
Interpolation_frequency/wandb/run-20251015_171013-qoogmqtp/: run-qoogmqtp.wandb
Interpolation_frequency/wandb/run-20251015_171013-qoogmqtp/files/: config.yaml  wandb-metadata.json
Interpolation_frequency/wandb/run-20251015_171107-ii75zd6q/: run-ii75zd6q.wandb
Interpolation_frequency/wandb/run-20251015_171107-ii75zd6q/files/: config.yaml  requirements.txt  wandb-metadata.json
Interpolation_frequency/wandb/run-20251015_171333-y2kt9duz/: run-y2kt9duz.wandb
Interpolation_frequency/wandb/run-20251015_171333-y2kt9duz/files/: config.yaml  wandb-metadata.json
Interpolation_frequency/wandb/run-20251015_172556-gd5j3kas/: run-gd5j3kas.wandb
Interpolation_frequency/wandb/run-20251015_172556-gd5j3kas/files/: config.yaml  wandb-metadata.json
Interpolation_frequency/wandb/run-20251015_172831-w9a66c8a/: run-w9a66c8a.wandb
Interpolation_frequency/wandb/run-20251015_172831-w9a66c8a/files/: wandb-metadata.json
Interpolation_frequency/wandb/run-20251016_131144-36f816d5/files/: wandb-metadata.json
Interpolation_spirals/: pyproject.toml
Interpolation_spirals/Interpolation_spirals/: dataset.py  pretrain.py  test.ipynb
Interpolation_synthetic/: example.env  pyproject.toml
Interpolation_synthetic/Interpolation_synthetic/: __main__.py  dataset.py  pretrain.py  test.ipynb
example/: README.md  pyproject.toml
example/example/: __main__.py  finetune.py  preprocess.py  pretrain.py
example_experiment/: README.md  pyproject.toml
example_experiment/example_experiment/: __main__.py  dataset.py  finetune.py
image_net/: README.md  image_net.env  pyproject.toml  run_experiment_LEO.sh  run_experiment_mn5.sh
image_net/image_net/: __main__.py  dataset.py  datasetTiny.py  finetune.py  pretrain.py
image_net/logs/: run15433622.out  run15434111.out
image_net/wandb/: latest-run
image_net/wandb/offline-run-20250505_153224-mcpnr793/: run-mcpnr793.wandb
image_net/wandb/offline-run-20250505_153224-mcpnr793/files/: requirements.txt  wandb-metadata.json
irregular_timeseries_classification/elasticc2/: README.md  pyproject.toml
irregular_timeseries_classification/lsst/: pyproject.toml
irregular_timeseries_classification/lsst/lsst/: config.py  dataset.py  pretrain.py
irregular_timeseries_classification/uea/: README.md  pyproject.toml
irregular_timeseries_classification/uea/uea/: __main__.py  base.py  config.py  dataset.py  finetune.py  load_from_tsfile_to_dataframe.py  preprocessor.py  pretrain.py  transformation.py  utils.py
pendulums/: train_pendulum.py
performance_test/: README.md  pyproject.toml
performance_test/performance_experiment/: __main__.py  custom_rope.py  dataset.py  run_exp.py
theoretical_validations/: README.md  pyproject.toml
theoretical_validations/theoretical_validations/: __main__.py  dataset.py  plot.py  run_tests.py  utils.py
tiny_imagenet/: pyproject.toml
tiny_imagenet/tiny_imagenet/: __main__.py  config.py  dataset.py  finetune.py  pretrain.py
(+12 files in other folders)
